# X-coder

./: .gitmodules  AndroidManifest.xml  CMakeLists.txt  README.md  Readme.md  Readme_ru.md  SWFFile.hpp  Workspace.lua  X-coder_ru.qm  X-coder_ru.ts  Xcoder.pro  decode.cpp  decode.h  decode.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  premake5.lua  processing.cpp  processing.h  processing.ui  res.qrc  utils.cpp  utils.h  v.json
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/src/lilmuff1/xcoder/: Utils.java
headers/: mainwindow.h
res/: res.qrc
res/translate/: X-coder_any.ts  X-coder_ru.qm  X-coder_ru.ts
source/: config.hpp  main.cpp  mainwindow.cpp  processing.cpp
src/: Main.cpp
translate/: X-coder_ru.qm
ui/: mainwindow.ui  processing.ui
